@@ -262,7 +262,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (I salute you!)</string>
-    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-04-10: Added tutorial, request translation feature.</string>
+    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-04-16: Added Text-To-Speech.\n2014-04-10: Added tutorial, request translation feature.</string>
     <string name="tutorial_2_title">Search</string>
     <string name="tutorial_2_msg">Use this to search the database. You can search using Klingon or English.</string>
     <string name="tutorial_3_title">Resources</string>
@@ -271,8 +271,8 @@
     <string name="tutorial_4_msg">Interact with other Klingon learners and speakers on the Google+ Klingon language community.</string>
     <string name="tutorial_5_title">Other features</string>
     <string name="tutorial_5_msg">Use the menu button to access other features.\n\nDo you have something you want translated which isn\'t in the database? Make a request to the Klingon Teacher.</string>
-    <string name="tutorial_6_title">Other features</string>
-    <string name="tutorial_6_msg">Like a Klingon word or phrase? Share it with your friends.\n\nReading a long text in Klingon (like Hamlet)? Activate float mode, and boQwI\' will hover over your browser, email, or ebook reader.</string>
+    <string name="tutorial_6_title">Even more features</string>
+    <string name="tutorial_6_msg">Want to hear what a Klingon word or phrase sounds like? Use the "speak" button. (Requires Klingon TTS engine.)\n\nReading a long text in Klingon (like Hamlet)? Activate float mode, and boQwI\' will hover over your browser, email, or ebook reader.</string>
     <string name="tutorial_7_title">Qapla\'! (Success!)</string>
     <string name="tutorial_7_msg">For advanced users, there are more settings under the Preferences menu.</string>
 </resources>
