@@ -90,7 +90,7 @@ index 5dfdcaf..c0698ec 100644
 @@ -44,10 +44,10 @@ import wei.mark.standout.StandOutWindow;
  import com.actionbarsherlock.view.MenuItem;
  
- // TUTORIAL
+ // TUTORIAL:
 -// import com.actionbarsherlock.view.Menu;
 -// import com.espian.showcaseview.ShowcaseView;
 -// import com.espian.showcaseview.targets.ActionItemTarget;
